tests/baselines/reference/es5-asyncFunctionElementAccess(strict=true).errors.txt
es5-asyncFunctionElementAccess.ts(1,13): error TS7005: Variable 'x' implicitly has an 'any' type.
es5-asyncFunctionElementAccess.ts(1,16): error TS7005: Variable 'y' implicitly has an 'any' type.
es5-asyncFunctionElementAccess.ts(1,19): error TS7005: Variable 'z' implicitly has an 'any' type.
es5-asyncFunctionElementAccess.ts(1,22): error TS7005: Variable 'a' implicitly has an 'any' type.
es5-asyncFunctionElementAccess.ts(1,25): error TS7005: Variable 'b' implicitly has an 'any' type.
es5-asyncFunctionElementAccess.ts(1,28): error TS7005: Variable 'c' implicitly has an 'any' type.


==== es5-asyncFunctionElementAccess.ts (6 errors) ====
    declare var x, y, z, a, b, c;
                ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                   ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
                            ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
                               ~
!!! error TS7005: Variable 'c' implicitly has an 'any' type.
    
    async function elementAccess0() {
        z = await x[y];
    }
    
    async function elementAccess1() {
        z = (await x)[y];
    }
    
    async function elementAccess2() {
        z = x[await y];
    }
    